--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -98,6 +98,7 @@ jobs:
           INPUT_USER=__token__ \
           INPUT_PASSWORD="" \
           INPUT_VERBOSE=false \
+          INPUT_REPOSITORY_URL=https://test.pypi.org/legacy/ \
           /app/twine-upload.sh \
             -verify-metadata true \
             -skip-existing false \
