- misc: add --var-identifier cli parameter - misc: complete vars resolution logic

--- a/tests/manual/output/management/service_deployer/Application_app-4-management.yml
+++ b/tests/manual/output/management/service_deployer/Application_app-4-management.yml
@@ -18,3 +18,10 @@ spec:
   syncPolicy:
     syncOptions:
       - ServerSideApply=true
+  ignoreDifferences:
+    - group: apps
+      jsonPointers:
+        - /spec/replicas
+      kind: Deployment
+      name: guestbook
+      namespace: default
