--- a/tests/manual/output/management/app_4/Deployment_thanos-sidecar-2.yml
+++ b/tests/manual/output/management/app_4/Deployment_thanos-sidecar-2.yml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: thanos-sidecar-2
-  namespace: kube-system
+  namespace: kube-default
 data: |-
   {
     "test": "jsoninclude",
