--- a/tests/manual/config.yml
+++ b/tests/manual/config.yml
@@ -38,6 +38,7 @@ envs:
       app_9: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
       app_10: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
       app_11: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
+      app_12: {vars: {version: 1.1.1}}
     vars:
       argocd:
         api_server: management-api-server
