--- a/tests/examples/app_types/source/03_kustomize_app/kustomization.yml
+++ b/tests/examples/app_types/source/03_kustomize_app/kustomization.yml
@@ -1,6 +1,6 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment_grafana.yml
+  - deployment_example-app.yml
+  - service_example-app.yml
