--- a/tests/manual/config.yml
+++ b/tests/manual/config.yml
@@ -37,7 +37,7 @@ envs:
       subdirectory_2/app_8: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
       app_9: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
       app_10: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
-      app_11: {app_deployer: service_deployer, project: management, destination_namespace: kube-default}
+      app_11: {app_deployer: service_deployer, non_k8s_files_to_render: ['values.yml.j2'], project: management, destination_namespace: kube-default}
       app_12: {vars: {version: 1.1.1}}
     vars:
       argocd:
