Add application sync_wave annotation

--- a/tests/manual/config.yml
+++ b/tests/manual/config.yml
@@ -9,6 +9,7 @@ envs:
         vars:
           argocd:
             project: management
+            sync_wave: -1
             source:
               target_revision: custom_revision
             destination:
