--- a/tests/manual/output/management/core_deployer/application_app-1-management.yml
+++ b/tests/manual/output/management/core_deployer/application_app-1-management.yml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: app-1-management
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: '-1'
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
