--- a/.github/workflows/tests-run.yml
+++ b/.github/workflows/tests-run.yml
@@ -16,50 +16,110 @@ jobs:
     runs-on: home-use
 
     steps:
-    - uses: actions/checkout@v4
-    - if: ${{ runner.arch == 'arm64' }}
-      name: Set up Python
-      uses: deadsnakes/action@v3.1.0
-      with:
-        python-version: "3.11"
-    - if: ${{ runner.arch == 'amd64' }}
-      name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 make_argocd_fly --count --select=E9,F63,F7,F82 --show-source --extend-exclude=".venv,.vscode,.pytest_cache,.github,dist" --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 make_argocd_fly --count --indent-size=2 --max-complexity=10 --max-line-length=150 --extend-exclude=".venv,.vscode,.pytest_cache,.github,dist" --statistics
+      - uses: actions/checkout@v4
+      - if: ${{ runner.arch == 'arm64' }}
+        name: Set up Python
+        uses: deadsnakes/action@v3.1.0
+        with:
+          python-version: "3.11"
+      - if: ${{ runner.arch == 'amd64' }}
+        name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 make_argocd_fly --count --select=E9,F63,F7,F82 --show-source --extend-exclude=".venv,.vscode,.pytest_cache,.github,dist" --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 make_argocd_fly --count --indent-size=2 --max-complexity=10 --max-line-length=150 --extend-exclude=".venv,.vscode,.pytest_cache,.github,dist" --statistics
 
   pytest:
-    name: Run pytest
+    name: "Run pytest with Python ${{ matrix.python-version }}"
     runs-on: home-use
 
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+          - "3.11"
+          - "3.12"
+
     steps:
-    - uses: actions/checkout@v4
-    - if: ${{ runner.arch == 'arm64' }}
-      name: Set up Python
-      uses: deadsnakes/action@v3.1.0
-      with:
-        python-version: "3.11"
-    - if: ${{ runner.arch == 'amd64' }}
-      name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
-      run: |
-        pytest
+      - uses: actions/checkout@v4
+      - if: ${{ runner.arch == 'arm64' }}
+        name: Set up Python
+        uses: deadsnakes/action@v3.1.0
+        with:
+          python-version: "${{ matrix.python-version }}"
+      - if: ${{ runner.arch == 'amd64' }}
+        name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "${{ matrix.python-version }}"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest tox tox-gh-actions
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f dev_requirements.txt ]; then pip install -r dev_requirements.txt; fi
+      - name: "Run tox for ${{ matrix.python-version }}"
+        run: |
+          python -m tox
+      - name: "Upload coverage data"
+        uses: actions/upload-artifact@v4
+        with:
+          name: covdata
+          path: .coverage.*
+
+  coverage:
+    name: Coverage
+    needs: pytest
+    runs-on: home-use
+    steps:
+      - name: "Check out the repo"
+        uses: "actions/checkout@v4"
+
+      - if: ${{ runner.arch == 'arm64' }}
+        name: Set up Python
+        uses: deadsnakes/action@v3.1.0
+        with:
+          python-version: "3.11"
+      - if: ${{ runner.arch == 'amd64' }}
+        name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: "Install dependencies"
+        run: |
+          python -m pip install tox tox-gh-actions
+
+      - name: "Download coverage data"
+        uses: actions/download-artifact@v4
+        with:
+          name: covdata
+
+      - name: "Combine"
+        run: |
+          python -m tox -e coverage
+          export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
+          echo "total=$TOTAL" >> $GITHUB_ENV
+          echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
+
+      - name: "Make badge"
+        uses: schneegans/dynamic-badges-action@v1.7.0
+        with:
+          auth: ${{ secrets.GIST_TOKEN }}
+          gistID: 26eb92c97bbfac22b938afebac85e7cd
+          filename: covbadge.json
+          label: Coverage
+          message: ${{ env.total }}%
+          minColorRange: 50
+          maxColorRange: 90
+          valColorRange: ${{ env.total }}
