--- a/.github/workflows/tests-run.yml
+++ b/.github/workflows/tests-run.yml
@@ -71,6 +71,10 @@ jobs:
       - name: "Run tox for ${{ matrix.python-version }}"
         run: |
           python -m tox
+      - name: debug
+        run: |
+          pwd
+          ls -la
       - name: "Upload coverage data"
         uses: actions/upload-artifact@v4
         with:
