fix: tox config

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 envlist = py311,py312,coverage
 
-[pyenv]
+[testenv]
 commands =
   python -m coverage run -p -m pytest
 
-[pyenv:coverage]
+[testenv:coverage]
 basepython = python3.11
 commands =
   python -m coverage combine
