fix: tox config

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,15 @@
 envlist = py311,py312,coverage
 
 [testenv]
+deps = -r requirements.txt
+       -r requirements-dev.txt
 commands =
   python -m coverage run -p -m pytest
 
 [testenv:coverage]
 basepython = python3.11
+deps = -r requirements.txt
+       -r requirements-dev.txt
 commands =
   python -m coverage combine
   python -m coverage report -m --skip-covered
