--- a/tests/manual/output/management/bootstrap/application_core-deployer-management.yml
+++ b/tests/manual/output/management/bootstrap/application_core-deployer-management.yml
@@ -14,7 +14,7 @@ spec:
     path: output/management/core_deployer
   destination:
     server: management-api-server
-    namespace: kube-system
+    namespace: kube-default
   syncPolicy:
     syncOptions:
       - ServerSideApply=true
