--- a/tests/manual/config.yml
+++ b/tests/manual/config.yml
@@ -43,6 +43,7 @@ envs:
       app_10: {app_deployer: service_deployer, vars: {argocd: {project: management, destination: {namespace: kube-default}}}}
       app_11: {app_deployer: service_deployer, non_k8s_files_to_render: ['values.yml.j2'], vars: {argocd: {project: management, destination: {namespace: kube-default}}}}
       app_12: {vars: {version: 1.1.1}}
+      app_13: {app_deployer: service_deployer, vars: {argocd: {project: management, source: {directory: {recurse: true}}, destination: {namespace: kube-default}}}}
     vars:
       argocd:
         destination:
