misc: detect and quote numbers starting with zepo

--- a/tests/manual/config.yml
+++ b/tests/manual/config.yml
@@ -101,7 +101,7 @@ vars:
   double_reference_version: ${reference_version}
   reference_version: ${app[version]}
   resource: Deployment_thanos.yml
-  number: 01239
+  number: 01239  # numbers cannot start with 0, it will be quoted
   number_oct: 0123
   number_string: "01239"
   number_string_2: "123"
