--- a/tests/manual/output/external_1/app_5/configmap_prometheus-config.yml
+++ b/tests/manual/output/external_1/app_5/configmap_prometheus-config.yml
@@ -9,8 +9,9 @@ data:
       "test": "json"
     }
   ip: 127.0.0.1
-  number: 1239
+  number: '01239'
   number_oct: 83
   number_string: '01239'
   number_string_2: '123'
   number_oct_string: '0123'
+  boolean_string: 'yes'
