--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -37,7 +37,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest tox tox-gh-actions
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
       - name: "Run tox for ${{ matrix.python-version }}"
         run: |
           python -m tox
@@ -69,7 +70,9 @@ jobs:
 
       - name: "Install dependencies"
         run: |
-          python -m pip install tox tox-gh-actions
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
 
       - name: "Download coverage data"
         uses: actions/download-artifact@v4
