--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py311,py312,coverage
+envlist = py311,py312,coverage,coverage-html
 
 [testenv]
 deps = -r requirements.txt
@@ -15,6 +15,15 @@ commands =
   python -m coverage combine
   python -m coverage report -m --skip-covered
   python -m coverage json
+
+[testenv:coverage-html]
+basepython = python3.12
+deps = -r requirements.txt
+       -r requirements.dev.txt
+commands =
+  python -m coverage combine
+  python -m coverage report -m --skip-covered
+  python -m coverage html
 
 [gh-actions]
 python =
