Sort files included in a template by filename
misc: configure package logger instead of root logger

--- a/make_argocd_fly/log_config.yml
+++ b/make_argocd_fly/log_config.yml
@@ -10,7 +10,7 @@ handlers:
     class: logging.StreamHandler
     stream: ext://sys.stdout
 loggers:
-  root:
+  make_argocd_fly:
     level: INFO
     handlers:
       - console
