--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,6 @@ find = {}
 [tool.setuptools.dynamic]
 readme = {file = ["README.md"], content-type = "text/markdown"}
 dependencies = {file = ["requirements.txt"]}
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
