--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "make-argocd-fly"
 description = "A tool to generate Kubernetes manifests from templates"
-license = {text = "GPLv3+"}
+license = "GPL-3.0-or-later"
 authors = [
     {name = "Andrei Lapin", email = "karandash8@gmail.com"},
 ]
