--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,10 @@
 
 name: Release
 
-on:
-  release:
-    types: [published]
+# on:
+#   release:
+#     types: [published]
+on: workflow_dispatch
 
 permissions:
   contents: read
