test: enable attestations

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
         run: |
           sudo mkdir /app
           sudo chown -R runner:runner /app
-          cp gh-action-pypi-publish/twine-upload.sh gh-action-pypi-publish/print-hash.py gh-action-pypi-publish/oidc-exchange.py /app
+          cp gh-action-pypi-publish/twine-upload.sh gh-action-pypi-publish/*.py /app
           cp -r dist /app/dist
           chmod +x /app/twine-upload.sh
       - name: Publish package to TestPyPI
@@ -106,6 +106,7 @@ jobs:
           INPUT_VERIFY_METADATA=true \
           INPUT_SKIP_EXISTING=false \
           INPUT_PRINT_HASH=false \
+          INPUT_ATTESTATIONS=true \
           /app/twine-upload.sh
 
   # publish-to-pypi:
