--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ Jinja2==3.1.6
 jinja2-ansible-filters==1.3.2
 yamllint==1.37.0
 packaging==24.2
+Deprecated==1.2.18  # replace with standard @warnings.deprecated in Python 3.13
