--- a/make_argocd_fly/log_config.yml
+++ b/make_argocd_fly/log_config.yml
@@ -2,7 +2,7 @@ version: 1
 disable_existing_loggers: False
 formatters:
   default:
-    datefmt: "%Y-%m-%dT%H:%M:%S"
+    datefmt: '%Y-%m-%dT%H:%M:%S'
     format: '[%(asctime)s.%(msecs)03dZ] %(levelname)s %(message)s'
 handlers:
   console:
